force-app/main/default/objects/Vendor__c/fields/ervice_Type__c.field-meta.xml
<CustomField>
    <fullName>ervice_Type__c</fullName>
    <label>ervice Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Decor</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Videography</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Stage Setup</fullName>
            </value>
            <value>
                <fullName>Makeup Artist</fullName>
            </value>
            <value>
                <fullName>DJ/Music</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Hosting/Anchor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>