force-app/main/default/objects/Vendor__c/fields/Phone_Custom__c.field-meta.xml
<CustomField>
    <fullName>Phone_Custom__c</fullName>
    <label>Phone Custom</label>
    <type>Phone</type>
</CustomField>