force-app/main/default/objects/Vendor__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Audio/Visual</fullName>
            </value>
            <value>
                <fullName>Decoration</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>