force-app/main/default/objects/Vendor__c/fields/Status_Custom__c.field-meta.xml
<CustomField>
    <fullName>Status_Custom__c</fullName>
    <label>Status Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>